Fix the image getting too big

--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3431,8 +3431,9 @@ form#user-login, form#user-pass {
           margin-bottom: 1em;
         }
         .views-field-body img {
-          width: 100%;
+          display: block;
           height: auto;
+          margin: auto;
         }
       }
     }
